// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Bucket/Toolbar/Get should render children when popover is opened 1`] = `
<div>
  <div
    class="makeStyles-root-9"
  >
    <button
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-11"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root makeStyles-popup-10 MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar/Get should render with custom label 1`] = `
<div>
  <div
    class="makeStyles-root-5"
  >
    <button
      role="button"
    >
      Custom Get Label
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-7"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar/Get should render with default label 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <button
      class="custom-class"
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-3"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;
